[project]
name = "sam3-moono"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cc-torch>=0.2",
    "einops>=0.8.2",
    "flash-attn-3>=3.0.0",
    "ftfy==6.1.1",
    "huggingface-hub>=1.14.0",
    "iopath>=0.1.10",
    "psutil>=7.2.2",
    "pycocotools>=2.0.11",
    "regex>=2026.5.9",
    "scikit-image>=0.26.0",
    "timm>=1.0.27",
    "torch==2.10.0",
    "torchvision==0.25.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

# to ignore warnings: "Multiple top-level packages discovered in a flat-layout"
[tool.setuptools]
py-modules = []

# ################
# uv configuration
# ################
# pin certain pacakges to certain index
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
flash_attn_3 = { index = "pytorch-cu128" }
cc-torch = { git = "https://github.com/ronghanghu/cc_torch.git" }

# extra python package indexes
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
cc-torch = ["torch"]
